replace Paths.get with Path.of