@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.regex.Pattern;
 
 import org.springframework.stereotype.Service;
@@ -33,7 +32,7 @@ public class FileUploadSubmissionExportService extends SubmissionExportService {
         String filePath = FileUploadSubmission.buildFilePath(exercise.getId(), submission.getId());
         String[] apiFilePathParts = ((FileUploadSubmission) submission).getFilePath().split(Pattern.quote(File.separator));
 
-        Path submissionPath = Paths.get(filePath, apiFilePathParts[apiFilePathParts.length - 1]);
+        Path submissionPath = Path.of(filePath, apiFilePathParts[apiFilePathParts.length - 1]);
 
         if (!submissionPath.toFile().exists()) { // throw if submission file does not exist
             throw new IOException("Cannot export submission " + submission.getId() + " because the uploaded file " + submissionPath + " doesn't exist.");
